--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div class="mochilaModal">
+        <div class="card">
+            Oi
+        </div>
+    </div>
     <header>
         <div class="container">
             <div class="dinheiro"></div>
@@ -17,11 +22,11 @@
             </div>
         </div>
     </header>
-    <main>
-        <div class="container supermercado">
+    <div class="main">
+        <div class="mainc supermercado">
 
         </div>
-    </main>
+    </div>
 </body>
 <script src="index.js"></script>
 
